static/css/base.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

html {
    height: 100%;
}

body {
    font-family: 'Raleway', sans-serif;
    display: flex;
    flex-direction: column;
    /* height: 100vh; */
    /* height: 100%; */
    min-height: calc(100vh);
    width: 75%;
    margin: 0 auto;
    background-color: #5057AF;
    position: relative;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

/*------------------------------ Navigation bar */

.dropdown-btn {
    padding: 0.1em;
    border-radius: 0.1em;
    margin-top: 1em;
}

.txt-btn {
    font-size: large;
}

.dropdown-toggle::after {
    content: none;
}

hr {
    background-color: white;
    width: 30vw;
}

.anchor-links {
    color: white;
}

/*------------------------------ Header */

.header-container {
    width: 100%;
    background-color: #AFA850;
    font-family: 'Roboto', sans-serif;
    border-radius: 0.5em;
    height: 5em;
    margin-top: 1em;
}

.navbar-buttons {
    background-color: #5057AF;
}

#main-logo-text {
    margin-right: 9em;
    color: white;
}

#account-management {
    margin-left: 9em;
}

/*------------------------------ Home Page */

.main-content {
    position: relative;
    width: 100%;
    height: 100%;
    margin: auto;

}

.content-containers {
    background-color: #AFA850;
    height: 80%;
    width: 45%;
    margin: auto;
    border-radius: 0.8em;
    border: 5px dotted white;
}

.home-inner-content {
    height: 90%;
    width: 90%;
    margin: auto;
    margin-top: 1em;
    margin-bottom: 1em;
    color: white;
    text-align: center;
    position: relative
}

.button-links {
    position: absolute;
    bottom: 0;
    background-color: #5057AF;
    border-radius: 0.5em;
    font-family: 'Roboto', sans-serif;
}

.home-intro-text {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
}

/*------------------------------ Footer */

.footer-container {
    width: 100%;
    background-color: #AFA850;
    border-radius: 0.5em;
    height: 5em;
    margin-bottom: 1em;
    position: relative;
    bottom: 0;
}

/*------------------------------ Products Page */

.products-header {
    width: 100%;
    height: 5em;
    margin: auto;
    margin-top: 1em;
    color: white;
    text-align: center;
}

.img-fluid {
    height: 12em;
}

.card-body {
    height: 4em;
    margin-bottom: 2em;
}

/*------------------------------ Workouts Plans Page */

.workout-categories {
    width: 80%;
    margin: auto;
    background-color: #AFA850;
    border-radius: 0.5em;
}

.content-containers-plans {
    background-color: #AFA850;
    width: 80%;
    margin: auto;
    border-radius: 0.8em;

}

.home-inner-content-plans {
    height: 90%;
    margin: auto;
    margin-top: 1em;
    margin-bottom: 1em;
    color: white;
    text-align: left;
    position: relative
}

.content-containers {
    background-color: #AFA850;
    height: 80%;
    width: 45%;
    margin: auto;
    border-radius: 0.8em;
    border: 5px dotted white;
}

.button-links-plans {
    background-color: #5057AF;
    border-radius: 0.5em;
    display: flex;
    margin: auto;
}

.button-space {
    height: 3em
}

.workout-content {
    height: 180px;
}

.text-container {
    width: 80%;
    height: 70%;
    background-color: #5057AF;
    border-radius: 0.5em;
}

.img-stretch {
    width: 100%;
    height: 100%;
}
/*------------------------------ Community Page */

.community-posts-categories {
    display: flex;
    height: 33%;
    width: 33%;
    padding: 1em;
    background-color: #AFA850;

}


/*------------------------------ Allauth */

.container {
    display: flex;
    justify-content: center;
    align-items: center;
}


.inner-content-allauth {
    background-color: #AFA850;
    color: white;
    width: 50vw;
    border-radius: 0.5em;
    font-family: 'Roboto', sans-serif;
    padding: 1em;
    text-align: center;
    position: relative;
}

.form-allauth {
    margin-top: 3em;
}

.button-allauth {
    margin-bottom: 2em;
    margin-top: 1em;
    border: none;
}

.link-allauth {
    margin-top: 1.75em;
}

#sign-out-text {
    margin-top: 1.75em;
}

/*------------------------------ Mailchimp */

/* .sign-up-section {
    display: flex;
    justify-content: right;
    margin-top: auto;
    height: 40%;
} */

/* #mc_embed_signup {
    background-color: #AFA850;
    clear: left;
    width: 35%;
    border-radius: 0.5em;
    margin-bottom: 3em;
} */

